修改文件: _posts/2019-11-03-深海迷航攻略.md

--- a/_posts/2019-11-03-深海迷航攻略.md
+++ b/_posts/2019-11-03-深海迷航攻略.md
@@ -4,7 +4,7 @@ show_title:    "深海迷航攻略"
 title:    "2019-11-03-深海迷航攻略"
 date:   2019-11-03  17:12 
 last_modified_at: 2019-11-03
-categories: others
+categories: zothers
 ---
 
 ## 缓存清理
