--- a/_posts/2019-09-05-项目文件夹结构.md
+++ b/_posts/2019-09-05-项目文件夹结构.md
@@ -3,7 +3,7 @@ layout: post
 show_title: "项目文件夹结构"
 title: "2019-09-05-项目文件夹结构"
 data: 2019-09-05 10:40
-categories: others
+categories: zothers
 ---
 
 层级不超过三级
