修改文件: _posts/2019-09-04-文档写作规范.md

--- a/_posts/2019-09-04-文档写作规范.md
+++ b/_posts/2019-09-04-文档写作规范.md
@@ -3,7 +3,7 @@ layout: post
 show_title: "文档写作规范"
 title: "2019-09-04-文档写作规范"
 data: 2019-09-04 10:5
-categories:  others
+categories:  zothers
 ---
 
 ## 命名规范
