修改文件: 2020-05-13-excel表格中任意个数相加后等于一个数.md

--- a/2020-05-13-excel表格中任意个数相加后等于一个数.md
+++ b/2020-05-13-excel表格中任意个数相加后等于一个数.md
@@ -31,3 +31,9 @@ categories: c&c++
 
 ![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2020-05-13-excel表格中任意个数相加后等于一个数/2加载宏.png)
 
+
+## 参考链接
+
+[excel 中任意几个数相加后等于一个数](https://blog.csdn.net/psp0001060/article/details/50537574)
+
+
