修改文件: 2020-05-13-excel表格中任意个数相加后等于一个数.md

--- a/2020-05-13-excel表格中任意个数相加后等于一个数.md
+++ b/2020-05-13-excel表格中任意个数相加后等于一个数.md
@@ -31,6 +31,31 @@ categories: c&c++
 
 ![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2020-05-13-excel表格中任意个数相加后等于一个数/2加载宏.png)
 
+### 3. 添加公式
+
+单击选择 C1 单元格，输入以下函数：
+`= sumproduct(A2:A19*B2:B19)`
+回车确认
+意思就是A列和B列的每行对应相乘结果再求和
+
+![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2020-05-13-excel表格中任意个数相加后等于一个数/4sum公式_167.png)
+
+输入完成后，依旧选择 C1 单元格，单击菜单栏的 `工具` 选项，选择单击 `规划求解`，进入下一步
+
+### 4. 规划求解 
+
+1. 设置目标单元格 ：默认设置好了，就是 C1，如果不是，单击输入框，再单击单元格 C1 即可
+2. 等于：选择 `值` 并填入要求和的值 `38481`
+![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2020-05-13-excel表格中任意个数相加后等于一个数/6规划求解值参数_292.png)
+
+3. 设置可变单元格：单击`可变单元格`下方的输入框，然后拖选 `B2 至 B9` 单元格，如下动图所示
+
+![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2020-05-13-excel表格中任意个数相加后等于一个数/7可变单元格.gif)
+
+4. 添加约束：单击`约束`右侧 添加 按钮，再弹出窗口中的 `单元格引用位置` 拖选  `B2 至 B9` 单元格，`约束值`设置为 `bin  二进制`单击 `确认` 退出。操作流程见下面动图。
+
+![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2020-05-13-excel表格中任意个数相加后等于一个数/8约束.gif)
+
 
 ## 参考链接
 
