--- a/2020-05-13-excel表格中任意个数相加后等于一个数.md
+++ b/2020-05-13-excel表格中任意个数相加后等于一个数.md
@@ -54,8 +54,17 @@ categories: c&c++
 
 4. 添加约束：单击`约束`右侧 添加 按钮，再弹出窗口中的 `单元格引用位置` 拖选  `B2 至 B9` 单元格，`约束值`设置为 `bin  二进制`单击 `确认` 退出。操作流程见下面动图。
 
+![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2020-05-13-excel表格中任意个数相加后等于一个数/添加约束.png)
+
 ![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2020-05-13-excel表格中任意个数相加后等于一个数/8约束.gif)
 
+### 5. 求解
+
+以上设置完成后，规划求解参数界面，应该如下左图所示。没有问题，单击 `求解` 按钮，开始自动计算。
+计算完成（有解），再弹窗中选择 `保存` ，单击 `确认` 结束。
+可以看到再 `列B` 中多出了 `0和1`.其中有1的那一行对应A列中的数字就是要找的那几个数。这里我们找到了三个是，验证结果也是对的。
+
+ ![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2020-05-13-excel表格中任意个数相加后等于一个数/7求解_106.png)
 
 ## 参考链接
 
