修改文件: 2020-05-13-excel表格中任意个数相加后等于一个数.md

--- a/2020-05-13-excel表格中任意个数相加后等于一个数.md
+++ b/2020-05-13-excel表格中任意个数相加后等于一个数.md
@@ -33,10 +33,10 @@ categories: c&c++
 
 ### 3. 添加公式
 
-单击选择 C1 单元格，输入以下函数：
-`= sumproduct(A2:A19*B2:B19)`
-回车确认
-意思就是A列和B列的每行对应相乘结果再求和
+单击选择 C1 单元格，输入以下函数：  
+`= sumproduct(A2:A19*B2:B19)`  
+回车确认  
+意思就是A列和B列的每行对应相乘结果再求和  
 
 ![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2020-05-13-excel表格中任意个数相加后等于一个数/4sum公式_167.png)
 
@@ -44,7 +44,7 @@ categories: c&c++
 
 ### 4. 规划求解 
 
-1. 设置目标单元格 ：默认设置好了，就是 C1，如果不是，单击输入框，再单击单元格 C1 即可
+1. 设置目标单元格 ：默认设置好了，就是 C1，如果不是，单击输入框，再单击单元格 C1 即可  
 2. 等于：选择 `值` 并填入要求和的值 `38481`
 ![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2020-05-13-excel表格中任意个数相加后等于一个数/6规划求解值参数_292.png)
 
@@ -60,9 +60,10 @@ categories: c&c++
 
 ### 5. 求解
 
-以上设置完成后，规划求解参数界面，应该如下左图所示。没有问题，单击 `求解` 按钮，开始自动计算。
-计算完成（有解），再弹窗中选择 `保存` ，单击 `确认` 结束。
-可以看到再 `列B` 中多出了 `0和1`.其中有1的那一行对应A列中的数字就是要找的那几个数。这里我们找到了三个是，验证结果也是对的。
+以上设置完成后，规划求解参数界面，应该如下左图所示。没有问题，单击 `求解` 按钮，开始自动计算。  
+计算完成（有解），再弹窗中选择 `保存` ，单击 `确认` 结束。  
+可以看到再 `列B` 中多出了 `0和1`.其中有1的那一行对应A列中的数字就是要找的那几个数。  
+这里我们找到了三个数，验证结果也是对的。  
 
  ![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2020-05-13-excel表格中任意个数相加后等于一个数/7求解_106.png)
 
