修改文件: 2020-05-13-excel表格中任意个数相加后等于一个数.md

--- a/2020-05-13-excel表格中任意个数相加后等于一个数.md
+++ b/2020-05-13-excel表格中任意个数相加后等于一个数.md
@@ -66,6 +66,8 @@ categories: c&c++
 这里我们找到了三个数，验证结果也是对的。  
 
  ![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2020-05-13-excel表格中任意个数相加后等于一个数/7求解_106.png)
+ 
+ 后面再算别的值，只需要更改 `规划求解参数界面` 的值，其它不用再设置。
 
 ## 参考链接
 
