--- a/2020-05-13-excel表格中任意个数相加后等于一个数.md
+++ b/2020-05-13-excel表格中任意个数相加后等于一个数.md
@@ -7,17 +7,16 @@ last_modified_at: 2020-05-13
 categories: c&c++
 ---
 
-本文主要介绍通过excel表格的`规划求解`和`sumproduct`函数，来计算表格中任意几个数相加后等于一个数。
+本文主要介绍通过 Microsoft Office 的 excel 表格的`规划求解`和`sumproduct`函数，来计算表格中任意几个数相加后等于一个数。  
+方法同样适用于  LIbreOffice 
 
 **缺点**
 但是规划求解只能取得一个解，即使有多个解。
 
-**用例：**
-以下多个数中（见下图），哪几个数相加的和是38481
-
 <!--more-->
 
-
+**用例：**
+以下多个数中（见下图），哪几个数相加的和是38481
 
 ### 1. 填入数字
 
@@ -44,7 +43,7 @@ categories: c&c++
 
 ### 4. 规划求解 
 
-1. 设置目标单元格 ：默认设置好了，就是 C1，如果不是，单击输入框，再单击单元格 C1 即可  
+1. 设置目标单元格 ：默认设置好了，就是 C1 单元格，如果不是，单击输入框，再单击单元格 C1 即可  
 2. 等于：选择 `值` 并填入要求和的值 `38481`
 ![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2020-05-13-excel表格中任意个数相加后等于一个数/6规划求解值参数_292.png)
 
@@ -52,7 +51,7 @@ categories: c&c++
 
 ![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2020-05-13-excel表格中任意个数相加后等于一个数/7可变单元格.gif)
 
-4. 添加约束：单击`约束`右侧 添加 按钮，再弹出窗口中的 `单元格引用位置` 拖选  `B2 至 B9` 单元格，`约束值`设置为 `bin  二进制`单击 `确认` 退出。操作流程见下面动图。
+4. 添加约束：单击`约束`右侧 添加 按钮，再弹出窗口中的 `单元格引用位置` 拖选  `B2 至 B9` 单元格，`约束值`设置为 `bin  二进制`，单击 `确认` 退出。操作流程见下面动图。
 
 ![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2020-05-13-excel表格中任意个数相加后等于一个数/添加约束.png)
 
@@ -60,9 +59,9 @@ categories: c&c++
 
 ### 5. 求解
 
-以上设置完成后，规划求解参数界面，应该如下左图所示。没有问题，单击 `求解` 按钮，开始自动计算。  
-计算完成（有解），再弹窗中选择 `保存` ，单击 `确认` 结束。  
-可以看到再 `列B` 中多出了 `0和1`.其中有1的那一行对应A列中的数字就是要找的那几个数。  
+以上设置完成后，`规划求解参数界面`应该如下左图所示。没有问题后，单击 `求解` 按钮，开始自动计算。  
+计算完成（有解），在弹窗中选择 `保存` ，单击 `确认` 结束。  
+可以看到在 `列 B` 中多出了 `0 和 1`。其中有 1 的那一行对应 A  列中的数字就是要找的那几个数。  
 这里我们找到了三个数，验证结果也是对的。  
 
  ![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2020-05-13-excel表格中任意个数相加后等于一个数/7求解_106.png)
@@ -71,6 +70,6 @@ categories: c&c++
 
 ## 参考链接
 
-[excel 中任意几个数相加后等于一个数](https://blog.csdn.net/psp0001060/article/details/50537574)
+1. [excel 中任意几个数相加后等于一个数](https://blog.csdn.net/psp0001060/article/details/50537574)
 
 
