--- a/_posts/2020-05-13-excel表格中任意个数相加后等于一个数.md
+++ b/_posts/2020-05-13-excel表格中任意个数相加后等于一个数.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-show_title: "2020-05-13-excel表格中任意个数相加后等于一个数"
+show_title: "excel表格中任意个数相加后等于一个数"
 title: "2020-05-13-excel表格中任意个数相加后等于一个数"
 date: 2020-05-13
 last_modified_at: 2020-05-13
