--- a/_posts/books/2019-12-14-HTML&CSS 设计与构建网站.md
+++ b/_posts/books/2019-12-14-HTML&CSS 设计与构建网站.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-show_title:    "2019-12-14-HTML&CSS_设计与构建网站"
+show_title:    "HTML&CSS_设计与构建网站"
 title:    "2019-12-14-HTML&CSS_设计与构建网站"
 date:   2019-12-14  10:2 
 last_modified_at:  2019-12-14 
