修改文件: _posts/books/2019-12-14-HTML&CSS 设计与构建网站.md

--- a/_posts/books/2019-12-14-HTML&CSS 设计与构建网站.md
+++ b/_posts/books/2019-12-14-HTML&CSS 设计与构建网站.md
@@ -8,7 +8,7 @@ isbook: true
 author: "[美]Jon Duckett"
 translator: "刘涛、陈学敏"
 press: "清华大学出版社"
-publishdate: "出版日期：2017-8"
+publishdate: "2017-8"
 pages: "480"
 bookimg: "/images/Posts/2019-12-14-HTML&CSS_设计与构建网站/HTML&CSS_设计与构建网站.jpg"
 doubanurl: "https://book.douban.com/subject/6585090/"
