修改文件: _posts/books/2019-12-14-HTML&CSS 设计与构建网站.md

--- a/_posts/books/2019-12-14-HTML&CSS 设计与构建网站.md
+++ b/_posts/books/2019-12-14-HTML&CSS 设计与构建网站.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: post_book
 show_title:    "HTML&CSS_设计与构建网站"
 title:    "2019-12-14-HTML&CSS_设计与构建网站"
 date:   2019-12-14  10:2 
