修改文件: _posts/2019-09-03-小书匠绑定第三方数据库.md

--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -3,6 +3,7 @@ layout: post
 show_title: "小书匠绑定第三方数据库"
 title: "2019-11-24-小书匠绑定第三方数据库"
 data: 2019-11-24 15:15
+last_modified_at: 2020-05-13
 categories: software
 ---
 
@@ -40,13 +41,14 @@ categories: software
 
 ![仓库名](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/小书匠绑定第三方数据库/1567697820062.png)
 
-**文件名生成规则:**
 
 按照默认方法，你的图片会被存储在   
-`https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/小书匠/xxx.png`
+`https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/小书匠/图片名.png`
 
 
-`https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/`这一段就是上图中的 url 前缀，不建议修改。应因为我是习惯图片和文章都保存在同一个仓库和分之下面。
+**文件名生成规则:**
+
+`https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/`这一段就是上图中的 url 前缀，~~不建议修改。应因为我是习惯图片和文章都保存在同一个仓库和分之下面。~~这个前缀如果不修改的化，会导致图片在国内访问时无法加载（不显示）。-2020-05-15。所以我们需要需改上图中的 
 
 后面一段`小书匠/xxx.png`，指定了图片在仓库中的位置，默认所有图片存在名为`小书匠`的文件夹下，建议修改，但这个还需要一些Github page 相关知识了：`头数据`。  请自行查阅学习。
 
