修改文件: _posts/2019-09-03-小书匠绑定第三方数据库.md

--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -41,11 +41,30 @@ categories: software
 
 ![仓库名](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/小书匠绑定第三方数据库/1567697820062.png)
 
-
 按照默认方法，你的图片会被存储在   
 `https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/小书匠/图片名.png`
 
 **文件名生成规则:**
+
+该规则规定了在博客文章新添加一张图片其存放位置，从 `根目录（你的github库目录）` 开始。
+
+这里我修改为
+```c
+images/Posts/{{title}}/{{filename}}
+```
+- `images`：是在当前库下新建的一个文件夹，专门用来存放图片
+- `Posts`：是`images`的子文件夹，专门用来存放博客图片
+- `titile`：是我的每篇博客文章标题（头数据），是虽文章标题变化的，这样就会为每篇博文新建一个文件夹，用来存放这篇博文里的所有图片
+
+通过以上设置，就可以将图片按博文标题分类存放，而不是全部放在一个文件夹下。
+
+例如本片博文里的图片都会存放在
+`https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/小书匠绑定第三方数据库/图片.png`路径下
+
+
+
+
+
 
 `https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/`这一段就是上图中的 url 前缀，~~不建议修改。应因为我是习惯图片和文章都保存在同一个仓库和分之下面。~~这个前缀如果不修改的化，会导致图片在国内访问时无法加载（不显示）。-2020-05-15。所以我们需要需改上图中的 
 
