修改文件: _posts/2019-09-03-小书匠绑定第三方数据库.md

--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -59,7 +59,7 @@ images/Posts/{{title}}/{{filename}}
 通过以上设置，就可以将图片按博文标题分类存放，而不是全部放在一个文件夹下。
 
 例如本片博文里的图片都会存放在 
-`https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/小书匠绑定第三方数据库/图片.png` 路径下
+`LonlyPan.github.io/images/Posts/小书匠绑定第三方数据库/图片名.png` 路径下
 
 
 
