修改文件: _posts/2019-09-03-小书匠绑定第三方数据库.md

--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -44,7 +44,7 @@ categories: software
 按照默认方法，你的图片会被存储在   
 `https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/小书匠/图片名.png`
 
-**文件名生成规则:**
+#### 文件名生成规则
 
 该规则规定了在博客文章新添加一张图片其存放位置，从 `根目录（你的github库目录）` 开始。
 
@@ -61,12 +61,15 @@ images/Posts/{{title}}/{{filename}}
 例如本片博文里的图片都会存放在 
 `LonlyPan.github.io（库名）/images/Posts/小书匠绑定第三方数据库（博文标题）/图片名.png` 路径下
 
+#### 请输入一个url前缀
 
+上面只是解决了存储问题，我们还需要解决访问问题，也就是怎么在文章中显示这张图片的问题。  
 
+因此我们需要获取图片的图片地址（链接）  
 
+ 设置里的 `url前缀` + 上面的`文件名路径` =  每张图片的 `图片地址`。
 
-
-`https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/`这一段就是上图中的 url 前缀，~~不建议修改。应因为我是习惯图片和文章都保存在同一个仓库和分之下面。~~这个前缀如果不修改的化，会导致图片在国内访问时无法加载（不显示）。-2020-05-15。所以我们需要需改上图中的 
+这个前缀如果不修改的化，会导致图片在国内访问时无法加载（不显示）。-2020-05-15。所以我们需要需改上图中的 
 
 后面一段`小书匠/xxx.png`，指定了图片在仓库中的位置，默认所有图片存在名为`小书匠`的文件夹下，建议修改，但这个还需要一些Github page 相关知识了：`头数据`。  请自行查阅学习。
 
