修改文件: _posts/2019-09-03-小书匠绑定第三方数据库.md

--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -58,7 +58,7 @@ images/Posts/{{title}}/{{filename}}
 
 通过以上设置，就可以将图片按博文标题分类存放，而不是全部放在一个文件夹下。
 
-例如本片博文里的图片都会存放在 
+例如本篇博文里的图片都会存放在 
 `LonlyPan.github.io（库名）/images/Posts/小书匠绑定第三方数据库（博文标题）/图片名.png` 路径下
 
 #### 请输入一个url前缀
@@ -67,9 +67,12 @@ images/Posts/{{title}}/{{filename}}
 
 因此我们需要获取图片的图片地址（链接）  
 
- 设置里的 `url前缀` + 上面的`文件名路径` =  每张图片的 `图片地址`。
+设置里的 `url前缀` + 上面的`文件名路径` =  每张图片的 `图片地址`。
 
-这个前缀如果不修改的化，会导致图片在国内访问时无法加载（不显示）。-2020-05-15。所以我们需要需改上图中的 
+这里提供了一个默认的前缀，但如果使用默认地址的话，会导致图片在国内访问时无法加载（不显示）。  
+原因是 `https://raw.githubusercontent.com` 这个网址被 DNS 污染了，导致国内无法访问，必须搭梯子才行。
+
+所以我们需要需改上图中的 
 
 后面一段`小书匠/xxx.png`，指定了图片在仓库中的位置，默认所有图片存在名为`小书匠`的文件夹下，建议修改，但这个还需要一些Github page 相关知识了：`头数据`。  请自行查阅学习。
 
