--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -54,7 +54,8 @@ images/Posts/{{title}}/{{filename}}
 ```
 - `images`：是在当前库下新建的一个文件夹，专门用来存放图片
 - `Posts`：是`images`的子文件夹，专门用来存放博客图片
-- `titile`：是我的每篇博客文章标题（头数据），是虽文章标题变化的，这样就会为每篇博文新建一个文件夹，用来存放这篇博文里的所有图片
+- `titile`：是我的每篇博客文章标题（头数据），是变量，这样就会为每篇博文新建一个文件夹，用来存放这篇博文里的所有图片
+-  `filename`：图片名，是变量
 
 通过以上设置，就可以将图片按博文标题分类存放，而不是全部放在一个文件夹下。
 
@@ -63,30 +64,17 @@ images/Posts/{{title}}/{{filename}}
 
 #### 请输入一个url前缀
 
-上面只是解决了存储问题，我们还需要解决访问问题，也就是怎么在文章中显示这张图片的问题。  
+上面只是解决了存储问题，我们还需要解决访问问题，也就是怎么在文章中显示这张图片的问题。  因此我们需要获取图片的图片地址（链接）  
 
-因此我们需要获取图片的图片地址（链接）  
+这里的 `url前缀` + 上面的`文件名路径` =  每张图片的 `图片地址`。
 
-设置里的 `url前缀` + 上面的`文件名路径` =  每张图片的 `图片地址`。
+这里提供了一个默认的前缀，但如果使用默认地址的话，会导致图片在国内访问时无法加载（不显示）。原因是 `https://raw.githubusercontent.com` 这个网址被 DNS 污染了，导致国内无法访问，必须搭梯子才行。
 
-这里提供了一个默认的前缀，但如果使用默认地址的话，会导致图片在国内访问时无法加载（不显示）。  
-原因是 `https://raw.githubusercontent.com` 这个网址被 DNS 污染了，导致国内无法访问，必须搭梯子才行。
+所以我们需要填入新的 url 前缀，规则为
+`https://库名/`  
+例如我的就是  
+`https://LonlyPan.github.io/`
 
-所以我们需要需改上图中的 
-
-后面一段`小书匠/xxx.png`，指定了图片在仓库中的位置，默认所有图片存在名为`小书匠`的文件夹下，建议修改，但这个还需要一些Github page 相关知识了：`头数据`。  请自行查阅学习。
-
-先来了解每个变量的意思
-
-|   变量名  |    含义    |
-|---|----|
-|  filename   |  图片名   |
-|   year   |   年    |
-|    month     |   月      |
-|     date   |     日    |
-|  title   |    文章标题    |
-
-注意 "\{\{\}\}" 不要丢，字符 “/”  表示目录。
 
 我的设置是：  
 `images/Posts/{{title}}/{{filename}}`
