修改文件: _posts/2019-09-03-小书匠绑定第三方数据库.md

--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -70,20 +70,8 @@ images/Posts/{{title}}/{{filename}}
 
 这里提供了一个默认的前缀，但如果使用默认地址的话，会导致图片在国内访问时无法加载（不显示）。原因是 `https://raw.githubusercontent.com` 这个网址被 DNS 污染了，导致国内无法访问，必须搭梯子才行。
 
-所以我们需要填入新的 url 前缀，规则为
-`https://库名/`  
-例如我的就是  
-`https://LonlyPan.github.io/`
-
-
-我的设置是：  
-`images/Posts/{{title}}/{{filename}}`
-
-这样我的图片保存位置就是：  
-`https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/博客文章标题名/图片名.png)`
-
-实际图片存储位置（上面的变量在实际使用时都会替换为实际信息，所以会有不同）：  
-`https://github.com/LonlyPan/LonlyPan.github.io/tree/master/images/Posts`
+所以我们需要填入新的 url 前缀，规则为  `https://库名/`   
+例如我的是   `https://LonlyPan.github.io/`
 
 ## 小书匠使用问题
 
