修改文件: _posts/2019-09-03-小书匠绑定第三方数据库.md

--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -39,7 +39,7 @@ categories: software
 
 步骤和上面类似
 
-![仓库名](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/小书匠绑定第三方数据库/1567697820062.png)
+![enter description here](https://LonlyPan.github.io/images/Posts/2019-11-24-小书匠绑定第三方数据库/仓库名.png)
 
 按照默认方法，你的图片会被存储在   
 `https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/小书匠/图片名.png`
