--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -19,18 +19,22 @@ categories: software
 1、首先在软件上点击 `小书匠` 图标，点击 `绑定`选项进入操作界面，选择 `数据存储-> github` 进入设置界面。这里可以看到，还可以绑定其他第三方，有的直接输入账号密码登录就可以，操作简单，自己选择吧。这里只谈GitHub。
 
 图片右半部分就是我们的设置界面，需要配置前两个参数，第三个为默认参数不用修改。
-![操作与设置界面](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/小书匠绑定第三方数据库/1567696458729.png)
+
+![enter description here](https://LonlyPan.github.io/images/Posts/2019-11-24-小书匠绑定第三方数据库/操作与设置界面.png)
 
 2、登录自己的Github，并新建一个仓库，也可以直接使用已经有的。完成后，点击上图底部箭头所指的**跳转链接**直接跳转到**token**申请界面或者点击自己的Github账户头像 `Settings -> Developer settings -> Personal access tokens -> Generate new token `。这个**tokens**相当于一个授权码，授权别人更改你指定仓库下的内容，这里我们待会授权给小书匠软件。
 
 按下图设置好，名字随意起，然后下拉网页至最底，点击绿色的`Generate token `按钮。
-![申请token界面](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/小书匠绑定第三方数据库/1567695427415.png)
+
+![enter description here](https://LonlyPan.github.io/images/Posts/2019-11-24-小书匠绑定第三方数据库/申请token界面.png)
 
 3、设置成功会显示下面界面，记得保存tokens值，后面还会用到。这个tokens是单次随机的的，如果删除了小书匠软件上的绑定信息，就需要重新生成tokens值，重新绑定。所以记得保存。
-![token值](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/小书匠绑定第三方数据库/1567695914382.png)
+
+![enter description here](https://LonlyPan.github.io/images/Posts/2019-11-24-小书匠绑定第三方数据库/token值.png)
 
 4、然后就是你的仓库名了，直接复制就好了。
-![仓库名](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/小书匠绑定第三方数据库/1567696155700.png)
+
+![enter description here](https://LonlyPan.github.io/images/Posts/2019-11-24-小书匠绑定第三方数据库/仓库名_(1).png)
 
 5、最后按照第一步的设置界面对应位置填写就可以了。
 
