修改文件: _posts/2019-09-03-小书匠绑定第三方数据库.md

--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -34,7 +34,7 @@ categories: software
 
 4、然后就是你的仓库名了，直接复制就好了。
 
-![enter description here](https://LonlyPan.github.io/images/Posts/2019-11-24-小书匠绑定第三方数据库/仓库名_(1).png)
+![enter description here](https://LonlyPan.github.io/images/Posts/2019-11-24-小书匠绑定第三方数据库/仓库名2.png)
 
 5、最后按照第一步的设置界面对应位置填写就可以了。
 
