修改文件: _posts/2020-05-13-excel表格中任意个数相加后等于一个数.md

--- a/_posts/2020-05-13-excel表格中任意个数相加后等于一个数.md
+++ b/_posts/2020-05-13-excel表格中任意个数相加后等于一个数.md
@@ -22,7 +22,7 @@ categories: c&c++
 
 首先我们在表格的列中填入所有数字，**注意第一行不要填写**
 
-![enter description here](https://github.com/LonlyPan/LonlyPan.github.io/images/Posts/2020-05-13-excel表格中任意个数相加后等于一个数/1添加数据_3.png)
+![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-13-excel表格中任意个数相加后等于一个数/1添加数据_3.png)
 
 ### 2. 加载宏
 
