--- a/_posts/2019-05-17-Arduino 1.8.9 和 VS code兼容乱码问题.md
+++ b/_posts/2019-05-17-Arduino 1.8.9 和 VS code兼容乱码问题.md
@@ -13,10 +13,12 @@ categories: arduino
  <!--more-->
  
  更新软件后，正常操作，编译之前的一个工程文件，突然发现 调试输出栏出现了乱码：
- ![输出乱码]( /images/Posts/20190517输出乱码.png)
+
+![enter description here](https://LonlyPan.github.io/images/Posts/2019-05-17-Arduino_1.8.9_和_VS_code兼容乱码问题/20190517输出乱码.png)
 
 但是可以正常的编译和下载，仅是乱码问题。下张图片显示上传成功。
- ![输出乱码 2](/images/Posts/20190517输出乱码2.png)
+
+![enter description here](https://LonlyPan.github.io/images/Posts/2019-05-17-Arduino_1.8.9_和_VS_code兼容乱码问题/20190517输出乱码2.png)
 
 一开始自己查找各种解决方法，最后还卸载重装了VS code，删除了其用户数据，但问题依旧。时隔两天，突然想到是不是Arduino的问题，于是将软件重装为1.8.8版本，然后，然后......问题就解决了。
 
