--- a/_posts/2019-05-17-彻底删除vscode及安装的插件和个人配置信息.md
+++ b/_posts/2019-05-17-彻底删除vscode及安装的插件和个人配置信息.md
@@ -11,13 +11,17 @@ categories: software
 
 1、卸载vscode应用软件（在控制面板里面找不到改软件，所以只能进入应用所在文件夹进行卸载）
 <!--more-->
-![1](/images/Posts/201905171.png)
+
+![enter description here](https://LonlyPan.github.io/images/Posts/2019-05-17-彻底删除vscode及安装的插件和个人配置信息/1.png)
+
 
 此步骤虽然删掉了应用软件，但是此时重新安装会发现之前下载的插件和个人配置信息都还会重新加载出来，所以继续进行以下步骤：
 
 2、找到下图中文件夹的目录，然后将之删除，即可彻底清除已安装的插件个个人配置信息
 
-![](/images/Posts/201905172.png)
-![](/images/Posts/201905173.png)
+![enter description here](https://LonlyPan.github.io/images/Posts/2019-05-17-彻底删除vscode及安装的插件和个人配置信息/。vscode.png)
+
+![enter description here](https://LonlyPan.github.io/images/Posts/2019-05-17-彻底删除vscode及安装的插件和个人配置信息/code.png)
+
 
 经过以上两步操作之后，再次重新安装软件，将是最原始的状态
