--- a/_posts/2019-08-29-电磁阀控制电路.md
+++ b/_posts/2019-08-29-电磁阀控制电路.md
@@ -8,7 +8,7 @@ categories: hardware
 
 ## 电路图
 
-![电磁阀电路图](https://www.github.com/LonlyPan/LonlyPan.github.io/raw/master/images/Posts/电磁阀控制电路/电磁阀电路图.png)
+![电磁阀电路图](https://LonlyPan.github.io/images/Posts/电磁阀控制电路/电磁阀电路图.png)
 
 <!--more-->
 ## 参考资料：
