--- a/_posts/2019-09-04-文档写作规范.md
+++ b/_posts/2019-09-04-文档写作规范.md
@@ -68,7 +68,7 @@ categories:  zothers
 
 如果是自制图片，配色请参考如下，格式不限png/jpg/gif...均可，如果是截图或者是其他地方引用图片，风格不受限制。
 
-![图片配色](https://www.github.com/LonlyPan/LonlyPan.github.io/raw/master/images/Posts/文档写作规范/1567563041545.png)
+![图片配色](https://LonlyPan.github.io/images/Posts/文档写作规范/1567563041545.png)
 
 
 ## 表格
