修改文件: _posts/2019-11-03-深海迷航攻略.md

--- a/_posts/2019-11-03-深海迷航攻略.md
+++ b/_posts/2019-11-03-深海迷航攻略.md
@@ -56,16 +56,16 @@ categories: zothers
 
 以下为主要的中文地图，都是高清的。
 
-![游戏地图](https://www.github.com/LonlyPan/LonlyPan.github.io/raw/master/images/Posts/深海迷航攻略/游戏地图.jpg)
+![游戏地图](https://LonlyPan.github.io/images/Posts/深海迷航攻略/游戏地图.jpg)
 
-![游戏地图2](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/深海迷航攻略/深海迷航地图2.jpeg)
+![游戏地图2](https://LonlyPan.github.io/images/Posts/深海迷航攻略/深海迷航地图2.jpeg)
 
 ### 失落之河
 
 失落之河是后期重要的物资获取地点，也是剧情必经之路。
 失落之河有四个主要入口，具体位置请参考上面**地图**的第一个链接。
 
-![失落之河](https://www.github.com/LonlyPan/LonlyPan.github.io/raw/master/images/Posts/深海迷航攻略/失落之河.jpg)
+![失落之河](https://LonlyPan.github.io/images/Posts/深海迷航攻略/失落之河.jpg)
 
 ## 生物蛋
 
