修改文件: _posts/2019-11-19-J-Link SWD下载错误.md

--- a/_posts/2019-11-19-J-Link SWD下载错误.md
+++ b/_posts/2019-11-19-J-Link SWD下载错误.md
@@ -20,7 +20,7 @@ J-Link：淘宝购买的J-Link V9.5（非官方）
 
 **错误1：**
 
-![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/J-Link_SWD下载错误/unsecured.png)
+![enter description here](https://LonlyPan.github.io/images/Posts/J-Link_SWD下载错误/unsecured.png)
 
 ```
 Secured Atmel SAMD device detected.
