修改文件: _posts/2019-11-19-J-Link SWD下载错误.md

--- a/_posts/2019-11-19-J-Link SWD下载错误.md
+++ b/_posts/2019-11-19-J-Link SWD下载错误.md
@@ -34,7 +34,7 @@ Note: Unsecuring will trigger a mass erase of the internal flash.
 
 **错误2：**
 
-![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/J-Link_SWD下载错误/error_connect.png)
+![enter description here](https://LonlyPan.github.io/images/Posts/J-Link_SWD下载错误/error_connect.png)
 ```
 Failed to launch program
 Error:Error connecting to device over SWD
@@ -45,7 +45,7 @@ Error:Error connecting to device over SWD
 
 **错误3：**
 
-![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/J-Link_SWD下载错误/unexpected_chip.png)
+![enter description here](https://LonlyPan.github.io/images/Posts/J-Link_SWD下载错误/unexpected_chip.png)
 ```
 Failed to launch program
 Error:Unexpected Chip Identifier 0x23000042（expected 0x61840300）
