--- a/_posts/2019-12-14-HTML&CSS-第2章 文本.md
+++ b/_posts/2019-12-14-HTML&CSS-第2章 文本.md
@@ -19,7 +19,7 @@ categories: web
 
 HTML标题一共有六个级别，h 即 heading 的首字母
  
-![标题](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2019-12-14-HTML&CSS-第2章_文本/标题.png)
+![标题](https://LonlyPan.github.io/images/Posts/2019-12-14-HTML&CSS-第2章_文本/标题.png)
 
 虽然各标题显示有大小之分，但这是各浏览器自己的默认显示样式（其本身是无大小之分的）。所以其显示大小也因浏览器而异，后期还需要使用 CSS 来具体控制其大小。
 
@@ -27,7 +27,7 @@ HTML标题一共有六个级别，h 即 heading 的首字母
 
 标签 \<p> 和 \</p>  之间的文字内容都属于一个段落。p 即 paragraph 的首字母。
 
-![paragraphs](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2019-12-14-HTML&CSS-第2章_文本/paragraphs.png)
+![paragraphs](https://LonlyPan.github.io/images/Posts/2019-12-14-HTML&CSS-第2章_文本/paragraphs.png)
 
 默认情况下，浏览器在显示段落时会另起一行并于后续段落保持一定的距离。
 
@@ -35,7 +35,7 @@ HTML标题一共有六个级别，h 即 heading 的首字母
 
 在文本内容中，我们通常会添加空格或换行；但在 HTML 中，如果有多个空格和一个换行，浏览器都会将其解释为**一个空格**；其存在的意义仅是为了增加代码的可读性，并不影响实际显示。所以不要试图使用空格来表缩进，用换行表示另起一行等等。
 
-![bold](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2019-12-14-HTML&CSS-第2章_文本/bold.png)
+![bold](https://LonlyPan.github.io/images/Posts/2019-12-14-HTML&CSS-第2章_文本/bold.png)
 
 ## 空元素
 
@@ -47,20 +47,20 @@ HTML标题一共有六个级别，h 即 heading 的首字母
 
 表示引用了一段或一句别人的话，名言。 \<blockquote> 表示一长段引用，通常会显示整段缩进。\<q> 表示短引用，之间的内容会自动添加双引号。
 
-![quote](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2019-12-14-HTML&CSS-第2章_文本/quote.png)
+![quote](https://LonlyPan.github.io/images/Posts/2019-12-14-HTML&CSS-第2章_文本/quote.png)
 
 ## 缩写词
 
 缩写词表示这之间的文本是缩写形式，如果你使用 title 属性指定了原词，则当鼠标停留在该缩写词上时，浏览器会自动显示原词内容。  
 \<abbr> 和 \<acronym> 完全相同，所以在 HTML5 中只保留使用 \<abbr> 
 
-![abbr](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2019-12-14-HTML&CSS-第2章_文本/abbr.png)
+![abbr](https://LonlyPan.github.io/images/Posts/2019-12-14-HTML&CSS-第2章_文本/abbr.png)
 
 ## 引文和定义
 
 引文 \<cite> 表示引用一部作品，区别引用（引用其中的内容），通常斜体显示。定义 \<dfn> 表示一个新术语的定义，通常斜体。
 
-![cite_dfn](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2019-12-14-HTML&CSS-第2章_文本/cite_dfn.png)
+![cite_dfn](https://LonlyPan.github.io/images/Posts/2019-12-14-HTML&CSS-第2章_文本/cite_dfn.png)
 
 ## 其它元素
 
