修改文件: _posts/2019-12-15-HTML&CSS-第4章 链接.md

--- a/_posts/2019-12-15-HTML&CSS-第4章 链接.md
+++ b/_posts/2019-12-15-HTML&CSS-第4章 链接.md
@@ -21,7 +21,7 @@ categories: web
 
 链接的显示文字应尽量表达清楚要跳转到何处，而不至于让读者困惑。
 
-![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2019-12-15-HTML&CSS-第4章_链接/link.png)
+![enter description here](https://LonlyPan.github.io/images/Posts/2019-12-15-HTML&CSS-第4章_链接/link.png)
 
 **在新窗口打开链接**
 
@@ -46,7 +46,7 @@ categories: web
 通常较大的网站，都会采用不同类别的文件夹来保存相应的网站文件。称之为目录。  
 下图是一个网站的目录结构。
 
-![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2019-12-15-HTML&CSS-第4章_链接/struture.png)
+![enter description here](https://LonlyPan.github.io/images/Posts/2019-12-15-HTML&CSS-第4章_链接/struture.png)
 
 **结构**  
 最顶端的文件夹称为根文件夹（图中examplearts文件夹），根文件夹包含了网站中其他所有的文件夹及文件。
