修改文件: _posts/2019-12-15-HTML&CSS-第5章 图像.md

--- a/_posts/2019-12-15-HTML&CSS-第5章 图像.md
+++ b/_posts/2019-12-15-HTML&CSS-第5章 图像.md
@@ -53,13 +53,13 @@ categories: web
 
 注意 alt 和 title 属性值正常时不会显示出来。
 
-![add_img](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2019-12-15-HTML&CSS-第5章_图像/add_img.png)
+![add_img](https://LonlyPan.github.io/images/Posts/2019-12-15-HTML&CSS-第5章_图像/add_img.png)
 
 # 在代码中插入图像
 
 上述都只是图像单独占用一行内容显示的效果，如果将上述代码插入文本中的任意位置会有不同的效果。以下示例三个位置：
 
-![img_side](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2019-12-15-HTML&CSS-第5章_图像/img_side.png)
+![img_side](https://LonlyPan.github.io/images/Posts/2019-12-15-HTML&CSS-第5章_图像/img_side.png)
 
 # 旧代码 align
 
@@ -75,7 +75,7 @@ categories: web
 
 **代码示例：**
 
-![align](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2019-12-15-HTML&CSS-第5章_图像/align.png)
+![align](https://LonlyPan.github.io/images/Posts/2019-12-15-HTML&CSS-第5章_图像/align.png)
 
 # 创建图像的三条原则
 
