修改文件: _posts/2019-12-8-Jekyll网站添加网站统计.md

--- a/_posts/2019-12-8-Jekyll网站添加网站统计.md
+++ b/_posts/2019-12-8-Jekyll网站添加网站统计.md
@@ -14,7 +14,7 @@ categories: web
 
 1、进入百度统计[官网](https://tongji.baidu.com/)，注册登陆。进入 **管理 -> 代码管理 ->代码获取** 界面，点击右上 **新增网站**，按提示填写网站信息，就会在当前页面自动生成一段代码，我们只需要其中的那串数字部分。见下图：
 
-![001-add_baidu_anaylics](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2019-12-8-Jekyll网站添加百度_谷歌统计/001-add_baidu_anaylics.png)
+![001-add_baidu_anaylics](https://LonlyPan.github.io/images/Posts/2019-12-8-Jekyll网站添加百度_谷歌统计/001-add_baidu_anaylics.png)
 
 2、在_include文件夹下中新建文件 `baidu-analytics.html` ,并加入以下代码。  
 **为了避免错误，建议读者直接复制本文中涉及的代码，文件名。**
@@ -60,11 +60,11 @@ baidu_analytics: f56279d43c733d547ea06f75f8e05d89
 
 1、进入谷歌统计[官网](https://tongji.baidu.com/)，注册登陆。进入 **管理 -> 新建媒体资源** 界面，添加一个新网站，按提示填写网站信息。
 
-![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2019-12-8-Jekyll网站添加百度_谷歌统计/001-add_google_anay.png)
+![enter description here](https://LonlyPan.github.io/images/Posts/2019-12-8-Jekyll网站添加百度_谷歌统计/001-add_google_anay.png)
 
 2、进入**管理 -> 媒体资源 > 跟踪信息 > 跟踪代码** 界面，获取**跟踪ID**
 
-![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2019-12-8-Jekyll网站添加百度_谷歌统计/002-google_ID.png)
+![enter description here](https://LonlyPan.github.io/images/Posts/2019-12-8-Jekyll网站添加百度_谷歌统计/002-google_ID.png)
 
 3、在_include文件夹下中新建文件 `google-analytics.html` ,并加入以下代码。  
 **为了避免错误，建议读者直接复制本文中涉及的代码，文件名。**
