修改文件: _posts/2020-05-17-塞尔达攻略.md

--- a/_posts/2020-05-17-塞尔达攻略.md
+++ b/_posts/2020-05-17-塞尔达攻略.md
@@ -27,17 +27,17 @@ categories: zothers
 
 **钻石位置1**
 
-![钻石位置1](./images/钻石位置1.png)
+![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-17-塞尔达攻略/钻石位置1.png)
 
-![钻石位置1.1](./images/钻石位置1.1.png)
+![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-17-塞尔达攻略/钻石位置1.1.png)
 
 **钻石位置2**
 
 有两颗钻石
 
-![钻石位置2](./images/钻石位置2.png)
+![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-17-塞尔达攻略/钻石位置2.png)
 
-![钻石位置2.1](./images/钻石位置2.1.png)
+![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-17-塞尔达攻略/钻石位置2.1.png)
 
 **参考链接**
 [游明星空](https://www.gamersky.com/handbook/201901/1148118.shtml)
