修改文件: _posts/2019-05-22-初识C语言.md

--- a/_posts/2019-05-22-初识C语言.md
+++ b/_posts/2019-05-22-初识C语言.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 show_title:  "初识C语言&C概述"
-title:  "2019-05-22-C Primer Pluse学习"
+title:  "2019-05-22-C Primer Plus学习"
 date:   2019-05-22 22:23:32
 categories: c&c++
 ---
