--- a/_posts/books/2020-05-20-读书笔记.md
+++ b/_posts/books/2020-05-20-读书笔记.md
@@ -1,7 +1,7 @@
 ---
 layout: post_book
 show_title:    "如何有效阅读一本书"
-title:    "2020-05-20-读书笔记"
+title:    "2020-05-20-如何有效阅读一本书"
 date:   2019-12-14
 last_modified_at:  2020-05-20
 isbook: true
