--- a/_posts/books/2020-05-20-如何有效阅读一本书.md
+++ b/_posts/books/2020-05-20-如何有效阅读一本书.md
@@ -9,14 +9,12 @@ author: "[日]奥野宣之"
 translator: "张晶晶"
 press: "江⻄人⺠出版社"
 publishdate: "2017-8"
-pages: "480"
-bookimg: "/images/Posts/2019-12-14-HTML&CSS_设计与构建网站/HTML&CSS_设计与构建网站.jpg"
-doubanurl: "https://book.douban.com/subject/6585090/"
+pages: "251"
+bookimg: "/images/Posts/2020-05-20-如何有效阅读一本书/s28705474.jpg"
 readdate: "2019-12-"
 booktag: "工具类"
 stars: "★★★★" 
 review: "系统讲述到了关于HTML和CSS的相关基础知识，运用大量图片代替枯燥的语言，加上精美的排版，不仅很好的讲述了这门设计语言，还能够激发初学者的阅读兴趣，同时配有大量实例进行练习，是一本对于初学者很友好的工具类丛书。"
 ---
-
 
 <!--more-->
