修改文件: _posts/books/2020-05-20-如何有效阅读一本书.md

--- a/_posts/books/2020-05-20-如何有效阅读一本书.md
+++ b/_posts/books/2020-05-20-如何有效阅读一本书.md
@@ -14,13 +14,7 @@ bookimg: "/images/Posts/2020-05-20-如何有效阅读一本书/s28705474.jpg"
 readdate: "2019-12-"
 booktag: "工具类"
 stars: "★★★★" 
-review: "本书教你仅使用一个笔记本来完成从找书、购书、读书、写笔
-记一整套流程,解决读完即忘、知识转化等问题。᯿点介绍笔
-记本在读书过程中如何使用、如何正确的读书并做好标记、如
-何写读书笔记。对于想要扎实读书的人,这本书是个很好的入
-⻔手册。书中有些方法难免过时,但作者提出的读书五阶段、
-读书技巧、笔记形式等还是有很大参考价值,值得我们借鉴并
-找到最符合自己最佳读书方法体系。"
+review: "本书教你仅使用一个笔记本来完成从找书、购书、读书、写笔记一整套流程，解决读完即忘、知识转化等问题。重点介绍笔记本在读书过程中如何使用、如何正确的读书并做好标记、如何写读书笔记。对于想要扎实读书的人，这本书是个很好的入⻔手册。书中有些方法难免过时，但作者提出的读书五阶段、读书技巧、笔记形式等还是有很大参考价值，值得我们借鉴并找到最符合自己最佳读书方法体系。"
 ---
 
 <!--more-->
