修改文件: _posts/books/2020-05-20-如何有效阅读一本书.md

--- a/_posts/books/2020-05-20-如何有效阅读一本书.md
+++ b/_posts/books/2020-05-20-如何有效阅读一本书.md
@@ -17,4 +17,16 @@ stars: "★★★★"
 review: "本书教你仅使用一个笔记本来完成从找书、购书、读书、写笔记一整套流程，解决读完即忘、知识转化等问题。重点介绍笔记本在读书过程中如何使用、如何正确的读书并做好标记、如何写读书笔记。对于想要扎实读书的人，这本书是个很好的入⻔手册。书中有些方法难免过时，但作者提出的读书五阶段、读书技巧、笔记形式等还是有很大参考价值，值得我们借鉴并找到最符合自己最佳读书方法体系。"
 ---
 
+## 感悟
+
+每读完一本书就要写读书笔记,然后再读下一本。
+手机备忘录+google keep作为随想笔记,记录平时感想
+淘宝购物⻋作为购书清单,随查随加购。
+纸质书标记处三次折⻆,画线改为 :>标注内容<,写笔记时
+再评论。电子书做标注可同时评论。
+使用iPad+notability写读书笔记,书评+感悟+摘抄评论
+技术类研究类书籍需要边读边记笔记,不同类型书籍笔记内
+容形式也会不同
+
+
 <!--more-->
