修改文件: _posts/2020-05-21-KICAD学习笔记.md

--- a/_posts/2020-05-21-KICAD学习笔记.md
+++ b/_posts/2020-05-21-KICAD学习笔记.md
@@ -12,6 +12,8 @@ categories: c&c++
 
 ## 参考连接
 
+[Setting up Library Loader for use with KiCad](https://www.samacsys.com/kicad/)
+
 [KICAD入门官方](chrome-extension://bocbaocobfecmglnmeaeppambideimao/pdf/viewer.html?file=https://docs.kicad-pcb.org/master/zh/getting_started_in_kicad/getting_started_in_kicad.pdf)
 [开源 EDA 工具 KiCad 5.1.5 电路设计手册](https://uinika.github.io/electronics/KiCad.html)
 [KiCad基本使用](https://an_kang.gitee.io/2020/ck93pvj620008u0rhh0qaa55i/)
