修改文件: _posts/2020-05-21-KICAD学习笔记.md

--- a/_posts/2020-05-21-KICAD学习笔记.md
+++ b/_posts/2020-05-21-KICAD学习笔记.md
@@ -12,6 +12,21 @@ categories: c&c++
 
 ## 参考连接
 
+
+不要再符号编辑和封装编辑中添加中文，否则在使用  Library Loader 时会出错，导致无法加载
+
+当你使用Library Loader 下载新元件库时，软件会提醒如下
+
+![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/warring.png)
+
+当你打开软件，加载符号编辑时，则会提醒
+![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/error.png)
+
+此时你的 SamacSys_Parts.lib 库是无法打开的，没有任何符号，但其实是有的
+原因是使用Library Loader 下载新元件时，其会自动修改 lib 库文件，将新原件添加进去，完成全自动操作。但如果存在中文，则可能会时中文乱码，导致数据错误。如下图，红色是原来的数据，绿色则是修改后的乱码数据。
+
+![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/reson.png)
+
 [Setting up Library Loader for use with KiCad](https://www.samacsys.com/kicad/)
 
 [KICAD入门官方](chrome-extension://bocbaocobfecmglnmeaeppambideimao/pdf/viewer.html?file=https://docs.kicad-pcb.org/master/zh/getting_started_in_kicad/getting_started_in_kicad.pdf)
