修改文件: _posts/2020-05-21-KICAD学习笔记.md

--- a/_posts/2020-05-21-KICAD学习笔记.md
+++ b/_posts/2020-05-21-KICAD学习笔记.md
@@ -22,8 +22,9 @@ categories: c&c++
 当你打开软件，加载符号编辑时，则会提醒
 ![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/error.png)
 
-此时你的 SamacSys_Parts.lib 库是无法打开的，没有任何符号，但其实是有的
-原因是使用Library Loader 下载新元件时，其会自动修改 lib 库文件，将新原件添加进去，完成全自动操作。但如果存在中文，则可能会时中文乱码，导致数据错误。如下图，红色是原来的数据，绿色则是修改后的乱码数据。
+此时你的 SamacSys_Parts.lib 库是无法打开的，没有任何符号，但其实是有的  
+
+原因是使用Library Loader 下载新元件时，其会自动修改 lib 库文件，将新原件添加进去，完成全自动操作。但如果存在中文，则可能会使中文乱码，导致数据错误。如下图，红色是原来的数据，绿色则是修改后的乱码数据。
 
 ![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/reson.png)
 
