修改文件: _posts/2020-05-21-KICAD学习笔记.md

--- a/_posts/2020-05-21-KICAD学习笔记.md
+++ b/_posts/2020-05-21-KICAD学习笔记.md
@@ -13,7 +13,7 @@ categories: c&c++
 ## 参考连接
 
 
-不要再符号编辑和封装编辑中添加中文，否则在使用  Library Loader 时会出错，导致无法加载
+不要在符号编辑和封装编辑中添加中文，否则在使用  Library Loader 时会出错，导致无法加载
 
 当你使用Library Loader 下载新元件库时，软件会提醒如下
 
