修改文件: _posts/2020-05-21-KICAD学习笔记.md

--- a/_posts/2020-05-21-KICAD学习笔记.md
+++ b/_posts/2020-05-21-KICAD学习笔记.md
@@ -28,7 +28,7 @@ categories: c&c++
 
 ![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/reson.png)
 
-所以当出现以上错误时，我们可以打开 lib 库文件，找到乱码处，手动修改回来。这样就能正常加载了，再在符号编辑处将中文删除，避免下次再错。
+所以当出现以上错误时，我们可以打开 SamacSys_Parts.lib 库文件，找到乱码处，手动修改回来。这样就能正常加载了，再在符号编辑处将中文删除，避免下次再错。
 
 [Setting up Library Loader for use with KiCad](https://www.samacsys.com/kicad/)
 
