修改文件: _posts/2020-05-21-KICAD学习笔记.md

--- a/_posts/2020-05-21-KICAD学习笔记.md
+++ b/_posts/2020-05-21-KICAD学习笔记.md
@@ -30,6 +30,8 @@ categories: c&c++
 
 所以当出现以上错误时，我们可以打开 SamacSys_Parts.lib 库文件，找到乱码处，手动修改回来。这样就能正常加载了，再在符号编辑处将中文删除，避免下次再错。
 
+另外可能 SamacSys_Parts.dcm 文件也会乱码，这里我没复现成功，原因和上面类似，手动修改即可。
+
 [Setting up Library Loader for use with KiCad](https://www.samacsys.com/kicad/)
 
 [KICAD入门官方](chrome-extension://bocbaocobfecmglnmeaeppambideimao/pdf/viewer.html?file=https://docs.kicad-pcb.org/master/zh/getting_started_in_kicad/getting_started_in_kicad.pdf)
