--- a/_posts/2020-05-21-KICAD学习笔记.md
+++ b/_posts/2020-05-21-KICAD学习笔记.md
@@ -28,7 +28,7 @@ categories: c&c++
 
 ![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/reson.png)
 
-所以当出现以上错误时，我们可以打开 SamacSys_Parts.lib 库文件，找到乱码处，手动修改回来。这样就能正常加载了，再在符号编辑处将中文删除，避免下次再错。
+所以当出现以上错误时，我们可以使用文档编辑软件（推荐 VS code）打开 SamacSys_Parts.lib 库文件，找到乱码处，手动修改回来。这样就能正常加载了，再在符号编辑处将中文删除，避免下次再错。
 
 另外可能 SamacSys_Parts.dcm 文件也会乱码，这里我没复现成功，原因和上面类似，手动修改即可。
 
