修改文件: _posts/2020-05-21-KICAD学习笔记.md

--- a/_posts/2020-05-21-KICAD学习笔记.md
+++ b/_posts/2020-05-21-KICAD学习笔记.md
@@ -20,6 +20,7 @@ categories: c&c++
 ![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/warring.png)
 
 当你打开软件，加载符号编辑时，则会提醒
+
 ![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/error.png)
 
 此时你的 SamacSys_Parts.lib 库是无法打开的，没有任何符号，但其实是有的  
@@ -32,12 +33,14 @@ categories: c&c++
 
 另外可能 SamacSys_Parts.dcm 文件也会乱码，这里我没复现成功，原因和上面类似，手动修改即可。
 
-[Setting up Library Loader for use with KiCad](https://www.samacsys.com/kicad/)
 
-[KICAD入门官方](chrome-extension://bocbaocobfecmglnmeaeppambideimao/pdf/viewer.html?file=https://docs.kicad-pcb.org/master/zh/getting_started_in_kicad/getting_started_in_kicad.pdf)
-[开源 EDA 工具 KiCad 5.1.5 电路设计手册](https://uinika.github.io/electronics/KiCad.html)
-[KiCad基本使用](https://an_kang.gitee.io/2020/ck93pvj620008u0rhh0qaa55i/)
-[KiCad-CN](https://gitee.com/KiCAD-CN)
-[开源 KiCad EDA 中文资料收集整理 (2020-05-15)](https://www.cnblogs.com/F4NNIU/p/KiCad.html)
-[嵌入式开发常用资料索引](http://www.wujique.com/2020/02/10/%E5%B5%8C%E5%85%A5%E5%BC%8F%E5%BC%80%E5%8F%91%E5%B8%B8%E7%94%A8%E8%B5%84%E6%96%99%E7%B4%A2%E5%BC%95/)
-[pcb设计工具kicad](https://www.stepfpga.com/doc/pcb%E8%AE%BE%E8%AE%A1%E5%B7%A5%E5%85%B7kicad)
+## 参考链接
+
+[Setting up Library Loader for use with KiCad](https://www.samacsys.com/kicad/)  
+[KICAD入门官方](chrome-extension://bocbaocobfecmglnmeaeppambideimao/pdf/viewer.html?file=https://docs.kicad-pcb.org/master/zh/getting_started_in_kicad/getting_started_in_kicad.pdf)  
+[开源 EDA 工具 KiCad 5.1.5 电路设计手册](https://uinika.github.io/electronics/KiCad.html)  
+[KiCad基本使用](https://an_kang.gitee.io/2020/ck93pvj620008u0rhh0qaa55i/)  
+[KiCad-CN](https://gitee.com/KiCAD-CN)  
+[开源 KiCad EDA 中文资料收集整理 (2020-05-15)](https://www.cnblogs.com/F4NNIU/p/KiCad.html)  
+[嵌入式开发常用资料索引](http://www.wujique.com/2020/02/10/%E5%B5%8C%E5%85%A5%E5%BC%8F%E5%BC%80%E5%8F%91%E5%B8%B8%E7%94%A8%E8%B5%84%E6%96%99%E7%B4%A2%E5%BC%95/)  
+[pcb设计工具kicad](https://www.stepfpga.com/doc/pcb%E8%AE%BE%E8%AE%A1%E5%B7%A5%E5%85%B7kicad)  
