--- a/_posts/2020-05-21-KICAD学习笔记.md
+++ b/_posts/2020-05-21-KICAD学习笔记.md
@@ -8,13 +8,19 @@ categories: c&c++
 ---
 
 KiCad 是一个开源软件工具，用于创建电子原理图和 PCB 图形。  
-有充分的理由认为, KiCad 已足够成熟, 并可以用于开发和维护复杂的电路板。 KiCad 对电路板的大小不做任何限制, 它可以轻松地处理多达 32 个铜层、多达 14 个技术层和多达 4 个辅助层的电路 板。KiCad 可以创建制造印刷电路板所需的所有文件、用于照片绘图仪的 Gerber 文件、钻孔文件、元件位置文件等 等。 作为开源 (GPL 许可) 软件, KiCad 是面向有意创建开源电子硬件的项目的工程师的理想工具。 在互联网上, KiCad 的主页是: 
+有充分的理由认为, KiCad 已足够成熟, 并可以用于开发和维护复杂的电路板。 KiCad 对电路板的大小不做任何限制, 它可以轻松地处理多达 32 个铜层、多达 14 个技术层和多达 4 个辅助层的电路 板。KiCad 可以创建制造印刷电路板所需的所有文件、用于照片绘图仪的 Gerber 文件、钻孔文件、元件位置文件等 等。  
+作为开源 (GPL 许可) 软件, KiCad 是面向有意创建开源电子硬件的项目的工程师的理想工具。 在互联网上, KiCad 的主页是: 
 
 https://kicad-pcb.org/
 
 <!--more-->
 
 ## KICAD安装
+
+下载链接：  
+https://kicad-pcb.org/download/
+Windows 版本下镜像站：
+https://mirror.tuna.tsinghua.edu.cn/kicad/windows/stable/
 
 ## KICAD工作流程
 
