修改文件: _posts/2020-05-21-KICAD学习笔记.md

--- a/_posts/2020-05-21-KICAD学习笔记.md
+++ b/_posts/2020-05-21-KICAD学习笔记.md
@@ -24,6 +24,10 @@ https://mirror.tuna.tsinghua.edu.cn/kicad/windows/stable/
 
 ## KICAD工作流程
 
+ KiCad 的特点是独特的工作流程，其中**原理图元件和封装是分开的。仅在创建原理图后才会为元件分配封装。**
+
+KiCad 工作流由两个主要任务组成: 绘制原理图和布置电路板。原理图元件库和 PCB 封装库对于这两个任务都是必 需的。KiCad 库中包括许多元件和封装, 并且还具有创建新元件的工具。 
+
 ## 使用KICad
 
 ## 绘制原理图
