修改文件: _posts/2020-05-21-KICAD学习笔记.md

--- a/_posts/2020-05-21-KICAD学习笔记.md
+++ b/_posts/2020-05-21-KICAD学习笔记.md
@@ -26,7 +26,11 @@ https://mirror.tuna.tsinghua.edu.cn/kicad/windows/stable/
 
  KiCad 的特点是独特的工作流程，其中**原理图元件和封装是分开的。仅在创建原理图后才会为元件分配封装。**
 
-KiCad 工作流由两个主要任务组成: 绘制原理图和布置电路板。原理图元件库和 PCB 封装库对于这两个任务都是必 需的。KiCad 库中包括许多元件和封装, 并且还具有创建新元件的工具。 
+KiCad 工作流由两个主要任务组成: 绘制原理图和布置电路板。原理图元件库和 PCB 封装库对于这两个任务都是必需的。
+
+在下图中, 您将看到一个表示 KiCad 工作流的流程图。 流程图说明了您需要采取哪些步骤, 以及以何种顺序采取这些步骤。
+
+![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/kicad_flowchart.png)
 
 ## 使用KICad
 
@@ -66,6 +70,9 @@ KiCad 工作流由两个主要任务组成: 绘制原理图和布置电路板。
 
 
 ## 参考链接
+
+1. [KiCad官方文档](https://docs.kicad-pcb.org/5.1.6/zh/)
+
 
 [Setting up Library Loader for use with KiCad](https://www.samacsys.com/kicad/)  
 [KICAD入门官方](chrome-extension://bocbaocobfecmglnmeaeppambideimao/pdf/viewer.html?file=https://docs.kicad-pcb.org/master/zh/getting_started_in_kicad/getting_started_in_kicad.pdf)  
