修改文件: _posts/2020-05-21-KICAD学习笔记.md

--- a/_posts/2020-05-21-KICAD学习笔记.md
+++ b/_posts/2020-05-21-KICAD学习笔记.md
@@ -28,7 +28,7 @@ https://mirror.tuna.tsinghua.edu.cn/kicad/windows/stable/
 
 KiCad 工作流由两个主要任务组成: 绘制原理图和布置电路板。原理图元件库和 PCB 封装库对于这两个任务都是必需的。
 
-在下图中, 您将看到一个表示 KiCad 工作流的流程图。 流程图说明了您需要采取哪些步骤, 以及以何种顺序采取这些步骤。
+在下图中, 您将看到一个表示 KiCad 工作流的流程图。 流程图说明了您需要采取哪些步骤, 以及以何种顺序采取这些步骤。（必看）
 
 ![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/kicad_flowchart.png)
 
