修改文件: _posts/2020-05-21-KICAD学习笔记.md

--- a/_posts/2020-05-21-KICAD学习笔记.md
+++ b/_posts/2020-05-21-KICAD学习笔记.md
@@ -32,6 +32,7 @@ KiCad 工作流由两个主要任务组成: 绘制原理图和布置电路板。
 
 ![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/kicad_flowchart.png)
 
+有关 库编辑器 和 封装编辑器 请见后文详述。
 ## 使用KICad
 
 ## 绘制原理图
