修改文件: _posts/2020-05-21-KICAD学习笔记.md

--- a/_posts/2020-05-21-KICAD学习笔记.md
+++ b/_posts/2020-05-21-KICAD学习笔记.md
@@ -15,14 +15,14 @@ https://kicad-pcb.org/
 
 <!--more-->
 
-## KICAD安装
+## 1 KICAD安装
 
 下载链接：  
 https://kicad-pcb.org/download/
 Windows 版本下镜像站：  
 https://mirror.tuna.tsinghua.edu.cn/kicad/windows/stable/
 
-## KICAD工作流程
+## 2 KICAD工作流程
 
  KiCad 的特点是独特的工作流程，其中**原理图元件和封装是分开的。仅在创建原理图后才会为元件分配封装。**
 
@@ -33,7 +33,20 @@ KiCad 工作流由两个主要任务组成: 绘制原理图和布置电路板。
 ![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/kicad_flowchart.png)
 
 有关 库编辑器 和 封装编辑器 请见后文详述。
-## 使用KICad
+
+## 3 使用KICad
+
+### 3.1 快捷键
+
+KiCad 有两种相关但不同的快捷键: 快捷键 (accelerator keys) 和热键 (hotkeys)。
+
+### 3.1.1 快捷键
+
+快捷键的效果与单击菜单或工具栏图标的效果相同: 将输入该命令, 但在单击鼠标左键之前不会发生任何情况。如果 要进入命令模式, 但不希望立即执行任何操作, 请使用快捷键。 快捷键显示在所有菜单窗格的右侧:
+
+
+### 3.1.2 热键
+
 
 ## 绘制原理图
 
