修改文件: _posts/2020-05-21-KICAD学习笔记.md

--- a/_posts/2020-05-21-KICAD学习笔记.md
+++ b/_posts/2020-05-21-KICAD学习笔记.md
@@ -148,7 +148,7 @@ xsltproc -o "%O" "/home/<user>/kicad/eeschema/plugins/bom2csv.xsl" "%I"
 xsltproc -o "%O.csv" "/home/<user>/kicad/eeschema/plugins/bom2csv.xsl" "%I"
 ```
 按 `帮助` 按钮获取更多信息
-30. 现在按 生成。 该文件（与项目同名）位于项目文件夹中（与.pro文件同级目录）。 使用 LibreOffice Calc 或 Excel 打开 * .csv 文件。 将出现导入窗口，按 OK。
+30. 现在按 生成。 该文件（与项目同名）位于项目文件夹中（与.pro文件同级目录）。 使用 LibreOffice Calc 或 Excel 打开 * .csv 文件，进行查看或编辑。
 
 ## 布局电路板
 
