修改文件: _posts/2020-05-21-KICAD学习笔记.md

--- a/_posts/2020-05-21-KICAD学习笔记.md
+++ b/_posts/2020-05-21-KICAD学习笔记.md
@@ -150,6 +150,9 @@ xsltproc -o "%O.csv" "/home/<user>/kicad/eeschema/plugins/bom2csv.xsl" "%I"
 按 `帮助` 按钮获取更多信息
 30. 现在按 生成。 该文件（与项目同名）位于项目文件夹中（与.pro文件同级目录）。 使用 LibreOffice Calc 或 Excel 打开 * .csv 文件，进行查看或编辑。
 
+
+您现在可以转到 PCB 布局部分，这将在下一节中介绍。 但是，在继续之前，让我们快速了解如何使用总线连接元件引脚。
+
 ## 布局电路板
 
 ## 制作原理图符号
