修改文件: _posts/2020-05-21-KICAD学习笔记.md

--- a/_posts/2020-05-21-KICAD学习笔记.md
+++ b/_posts/2020-05-21-KICAD学习笔记.md
@@ -151,6 +151,13 @@ xsltproc -o "%O.csv" "/home/<user>/kicad/eeschema/plugins/bom2csv.xsl" "%I"
 
 您现在可以转到 PCB 布局部分，这将在下一节中介绍。 但是，在继续之前，让我们快速了解如何使用总线连接元件引脚。
 
+### KiCad 的总线连接
+
+有时您可能需要将元件 A 的多个顺序引脚与元件 B 的其他顺序引脚连接。在这种情况下，您有两个选项：我们已经看到的标记方法或使用总线连接。 让我们看看如何使用总线的方式。
+
+1. 让我们假设您有四个4针连接器，您想要将引脚连接在一起。 使用标签选项（按 \[L]）标记 P4 部件的引脚4。 将此标签命名为 a1 。 现在按 [Insert] 将相同的项目自动添加到引脚4（引脚3）下方的引脚上。 注意标签是如何自动重命名为 a2 。
+>通过 \[Insert] 可重复上一项 选项，并自动递增编号。用于重复期间项目插入。
+2. 
 ## 布局电路板
 
 ## 制作原理图符号
