修改文件: _posts/2020-05-21-KICAD学习笔记.md

--- a/_posts/2020-05-21-KICAD学习笔记.md
+++ b/_posts/2020-05-21-KICAD学习笔记.md
@@ -153,12 +153,44 @@ xsltproc -o "%O.csv" "/home/<user>/kicad/eeschema/plugins/bom2csv.xsl" "%I"
 
 ### KiCad 的总线连接
 
-有时您可能需要将元件 A 的多个顺序引脚与元件 B 的其他顺序引脚连接。在这种情况下，您有两个选项：我们已经看到的标记方法或使用总线连接。 让我们看看如何使用总线的方式。
+有时您可能需要将元件 A 的多个顺序引脚与元件 B 的其他顺序引脚连接。在这种情况下，您有两个选项：我们已经看到的标记方法或使用总线连接。 让我们看看如何做到这一点。
 
-1. 让我们假设您有四个4针连接器，您想要将引脚连接在一起。 使用标签选项（按 \[L]）标记 P4 部件的引脚4。 将此标签命名为 a1 。 现在按 [Insert] 将相同的项目自动添加到引脚4（引脚3）下方的引脚上。 注意标签是如何自动重命名为 a2 。
+1. 让我们假设您有三个4针连接器，您想要将引脚连接在一起。 使用标签选项（按 \[L]）标记 P4 部件的引脚4。 将此标签命名为 a1 。 现在按 [Insert] 将相同的项目自动添加到引脚4（引脚3）下方的引脚上。 注意标签是如何自动重命名为 a2 。
 >通过 \[Insert] 可重复上一项 选项，并自动递增编号。用于重复期间项目插入。
-2. 
+2. 在另外两个连接器 CONN_2 和 CONN_3 上重复相同的标签操作，您就完成了。 如果继续制作 PCB，您将看到三个连接器相互连接。 下图2 显示了我们描述的结果。 出于美观目的，还可以使用`将电线放入总线`图标图像![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/add_line2bus.png) 添加一系列入口，将电线放入总线入口和使用`总线线路`图标图像：![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/add_bus2bus.png)将总线放到总线入口 ，如下图3 所示。但是，请注意，对 PCB 没有影响。
+3. 应该指出的是，连接到 图2 中的引脚的短导线不是严格必需的。 实际上，标签可以直接应用于引脚。
+4. 让我们更进一步，假设你有一个名为 CONN_4 的第四个连接器，无论出于什么原因，它的标签恰好有点不同（b1，b2，b3，b4）。 现在我们想要以引脚到引脚的方式将_Bus a_ 与 Bus b 连接起来。 我们希望不使用引脚标记（这也是可能的），而是使用总线上的标签，每个总线一个标签。
+5. 使用之前说明的标记方法连接并标记 CONN_4。 将引脚命名为b1，b2，b3和b4。 使用图标 ![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/add_line2bus.png) 将引脚连接到一系列 `电线到总线入口` ，并使用图标 ![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/add_bus.png)连接到总线。见下图4。
+6. 在 CONN_4 的总线上放一个标签（按[l]）并命名为 b\[1..4] 。
+7. 在前一个总线上放一个标签（按[l]）并将其命名为 a\[1..4] 。
+8. 我们现在可以做的是使用带有按钮图像的总线连接总线 a[1..4] 和总线 b[1..4] ： ![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/add_bus.png)。
+9. 通过将两条总线连接在一起，引脚a1 将自动连接到 引脚b1，a2将连接到b2，依此类推。 图4 显示了最终结果的样子。
+![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/gsik_bus_connection.png)
+
+
 ## 布局电路板
+
+1. 从 KiCad 项目管理器，单击 Pcb布局编辑器 图标 ![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/pcbnew.png) 。 您还可以使用 Eeschema 中的相应工具栏按钮。 Pcbnew 窗口将打开。 如果您收到一条消息，指出 \*.kicad_pcb 文件不存在并询问您是否要创建它，只需单击是。
+>也可以直接在Eeschema  原理图 界面中菜单栏上的 **工具 -> 从原理图更新 PCB..** ，直接基于原理图生成 PCB ，操作完成以后将会自动打开如下的 Pcbnew 编辑界面。若如此，可跳过步骤5。
+2. 首先输入一些原理图信息。 单击顶部工具栏上的 页面设置 图标 ![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/sheetset.png) 。 将相应的 纸张尺寸（ A4，8.5x11 等）和 标题 设置为 教程1 。
+3. 最好将 间距 和 最小布线宽度 设置为PCB制造商要求的宽度。 通常，您可以将间隙设置为 0.25mm，将最小轨道宽度设置为 0.25mm 。 单击 设置 → 设计规则 菜单。 如果它尚未显示，请单击 网络类编辑器 选项卡。 将窗口顶部的 间距 字段更改为 0.25mm，将 布线宽度 字段更改为 0.25mm，如下所示。 这里的测量单位是 mm。
+![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/design_rules.png)
+4. 单击 全局设计规则 选项卡，将 最小布线宽度 设置为 0.25mm 。 单击 确定 按钮以提交更改并关闭 设计规则编辑器 窗口。
+5. 单击菜单栏上的 **工具 -> 从原理图更新 PCB..** ，导入元件。将元件移动到板的中间。
+6. 所有元件都通过称为 `飞线` 的一组细线体现引脚连接关系。 按下 显示/隐藏板飞线 按钮 ![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/general_ratsnest.png) 可以切换显示状态。
+7. 您可以通过将每个元件悬停在其上并按 \[m] 来移动它们。 单击要放置它们的位置。 或者，您可以通过单击选择元件然后拖动它。 按 \[r] 旋转元件。 移动所有元件，直到最小化电线交叉的数量。
+![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/gsik_tutorial1_080.png)
+8. 现在我们将定义 PCB 的板子形状。 从顶部工具栏的下拉菜单中选择 边切（边缘切割） 图层。 单击右侧工具栏上的 添加图形线 图标 ![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/add_dashed_line.png) 。 沿着电路板边缘，在每个角落点击，并记住在绿色边缘和 PCB 边缘之间留一个小间隙。
+![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/select_edge_cuts.png)
+10. 接下来，连接除 GND 之外的所有电线。 事实上，我们将使用放置在电路板底部铜线（称为 B.Cu ）的接地层一次连接所有 GND 连接。
+11. 如果您决定改为使用 4层 PCB，请转到 设置 → 层设置 并将 铜层 更改为 4.在 层 表中，您可以命名图层并确定它们的含义 用于。 请注意，可以通过 预设图层分组 菜单选择非常有用的预设。
+12. 现在我们必须选择我们想要处理的铜层。 单击右侧工具栏上的 布线 图标![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/add_tracks.png) 。 单击开始布线，双击结束。布线宽度将默认为 0.250mm。 您可以从顶部工具栏的下拉菜单中更改布线宽度。 请注意，默认情况下，您只有一个可用的布线宽度。
+13. 如果您想添加更多的布线宽度，请转到：文件 → 电路板设置 或 单击顶部工具栏上的电路板设置按钮![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/电路板设置.png)，在此设置窗口的 **设计规则 →  导线和过孔** 选项中，添加您希望可用的任何其他宽度。
+![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/step-7.png)
+14. 然后，您可以在布置电路板时从下拉菜单中选择布线的宽度。 请参阅下面的示例（英寸）。
+![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/step-8.png)
+15. 或者，您可以添加一个 网络类。 转到 设计规则 → 网络类编辑器 并添加新类。 这样当我们需要批量指定一类相同类型的布线（如电源类，特殊0信号类），就可以指定该导线所属网络类，自动批量应用布线规则。
+
 
 ## 制作原理图符号
 
