修改文件: _posts/2020-05-21-KICAD学习笔记.md

--- a/_posts/2020-05-21-KICAD学习笔记.md
+++ b/_posts/2020-05-21-KICAD学习笔记.md
@@ -189,7 +189,7 @@ xsltproc -o "%O.csv" "/home/<user>/kicad/eeschema/plugins/bom2csv.xsl" "%I"
 ![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/step-7.png)
 14. 然后，您可以在布置电路板时从下拉菜单中选择布线的宽度。 请参阅下面的示例（英寸）。
 ![enter description here](https://LonlyPan.github.io/images/Posts/2020-05-21-KICAD学习笔记/step-8.png)
-15. 或者，您可以添加一个 网络类。 转到 设计规则 → 网络类编辑器 并添加新类。 这样当我们需要批量指定一类相同类型的布线（如电源类，特殊0信号类），就可以指定该导线所属网络类，自动批量应用布线规则。
+15. 或者，您可以添加一个 网络类。 转到 设计规则 → 网络类编辑器 并添加新类。 这样当我们需要批量指定一类相同类型的布线（如电源类，特殊0信号类），就可以指定该导线所属网络类，自动批量应用布线规则而不影响到其他布线。
 
 
 ## 制作原理图符号
